prueba/parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> TkOBlock declarations instructions TkCBlock
Rule 3     declarations -> TkDeclare seq_declarations
Rule 4     declarations -> lambda
Rule 5     seq_declarations -> declaration TkSemicolon seq_declarations
Rule 6     seq_declarations -> declaration
Rule 7     declaration -> idLists TkTwoPoints type
Rule 8     idLists -> id TkComma idLists
Rule 9     idLists -> id
Rule 10    instructions -> instructions TkSemicolon instruction
Rule 11    instructions -> instruction
Rule 12    instruction -> TkSkip
Rule 13    instruction -> assignment
Rule 14    instruction -> print_instruction
Rule 15    instruction -> conditional
Rule 16    instruction -> for
Rule 17    instruction -> do
Rule 18    assignment -> id TkAsig expression
Rule 19    assignment -> id TkAsig array_expr
Rule 20    expression -> expression TkPlus expression
Rule 21    expression -> expression TkMinus expression
Rule 22    expression -> expression TkMult expression
Rule 23    expression -> expression TkOr expression
Rule 24    expression -> expression TkAnd expression
Rule 25    expression -> expression TkLess expression
Rule 26    expression -> expression TkLeq expression
Rule 27    expression -> expression TkGeq expression
Rule 28    expression -> expression TkGreater expression
Rule 29    expression -> expression TkEqual expression
Rule 30    expression -> expression TkNEqual expression
Rule 31    expression -> TkMinus expression
Rule 32    expression -> TkNot expression
Rule 33    expression -> TkOpenPar expression TkClosePar
Rule 34    expression -> array_access
Rule 35    expression -> array_modify
Rule 36    expression -> number
Rule 37    expression -> boolean
Rule 38    expression -> id
Rule 39    expression -> string
Rule 40    array_expr -> array
Rule 41    array -> array TkComma expression
Rule 42    array -> expression
Rule 43    array_access -> id TkOBracket expression TkCBracket
Rule 44    array_modify -> expression TkOpenPar expression TkTwoPoints expression TkClosePar
Rule 45    print_instruction -> TkPrint concatenation
Rule 46    concatenation -> concatenation TkConcat expression
Rule 47    concatenation -> expression
Rule 48    conditional -> TkIf guards TkFi
Rule 49    guards -> guards TkGuard guard
Rule 50    guards -> guard
Rule 51    guard -> expression TkArrow execute
Rule 52    execute -> instructions
Rule 53    execute -> block
Rule 54    for -> TkFor id TkIn expression TkTo expression TkArrow execute TkRof
Rule 55    do -> TkDo expression TkArrow execute TkOd
Rule 56    type -> TkInt
Rule 57    type -> TkBool
Rule 58    type -> TkArray TkOBracket number TkSoForth number TkCBracket
Rule 59    id -> TkId
Rule 60    number -> TkNum
Rule 61    boolean -> TkTrue
Rule 62    boolean -> TkFalse
Rule 63    string -> TkString
Rule 64    lambda -> <empty>

Terminals, with rules where they appear

TkAnd                : 24
TkArray              : 58
TkArrow              : 51 54 55
TkAsig               : 18 19
TkBool               : 57
TkCBlock             : 2
TkCBracket           : 43 58
TkClosePar           : 33 44
TkComma              : 8 41
TkConcat             : 46
TkDeclare            : 3
TkDo                 : 55
TkEqual              : 29
TkFalse              : 62
TkFi                 : 48
TkFor                : 54
TkGeq                : 27
TkGreater            : 28
TkGuard              : 49
TkId                 : 59
TkIf                 : 48
TkIn                 : 54
TkInt                : 56
TkLeq                : 26
TkLess               : 25
TkMinus              : 21 31
TkMult               : 22
TkNEqual             : 30
TkNot                : 32
TkNum                : 60
TkOBlock             : 2
TkOBracket           : 43 58
TkOd                 : 55
TkOpenPar            : 33 44
TkOr                 : 23
TkPlus               : 20
TkPrint              : 45
TkRof                : 54
TkSemicolon          : 5 10
TkSkip               : 12
TkSoForth            : 58
TkString             : 63
TkTo                 : 54
TkTrue               : 61
TkTwoPoints          : 7 44
error                : 

Nonterminals, with rules where they appear

array                : 40 41
array_access         : 34
array_expr           : 19
array_modify         : 35
assignment           : 13
block                : 1 53
boolean              : 37
concatenation        : 45 46
conditional          : 15
declaration          : 5 6
declarations         : 2
do                   : 17
execute              : 51 54 55
expression           : 18 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 32 33 41 42 43 44 44 44 46 47 51 54 54 55
for                  : 16
guard                : 49 50
guards               : 48 49
id                   : 8 9 18 19 38 43 54
idLists              : 7 8
instruction          : 10 11
instructions         : 2 10 52
lambda               : 4
number               : 36 58 58
print_instruction    : 14
program              : 0
seq_declarations     : 3 5
string               : 39
type                 : 7


state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . TkOBlock declarations instructions TkCBlock

    TkOBlock        shift and go to state 3

    program                        shift and go to state 1
    block                          shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> TkOBlock . declarations instructions TkCBlock
    (3) declarations -> . TkDeclare seq_declarations
    (4) declarations -> . lambda
    (64) lambda -> .

    TkDeclare       shift and go to state 5
    TkSkip          reduce using rule 64 (lambda -> .)
    TkPrint         reduce using rule 64 (lambda -> .)
    TkIf            reduce using rule 64 (lambda -> .)
    TkFor           reduce using rule 64 (lambda -> .)
    TkDo            reduce using rule 64 (lambda -> .)
    TkId            reduce using rule 64 (lambda -> .)

    declarations                   shift and go to state 4
    lambda                         shift and go to state 6

state 4

    (2) block -> TkOBlock declarations . instructions TkCBlock
    (10) instructions -> . instructions TkSemicolon instruction
    (11) instructions -> . instruction
    (12) instruction -> . TkSkip
    (13) instruction -> . assignment
    (14) instruction -> . print_instruction
    (15) instruction -> . conditional
    (16) instruction -> . for
    (17) instruction -> . do
    (18) assignment -> . id TkAsig expression
    (19) assignment -> . id TkAsig array_expr
    (45) print_instruction -> . TkPrint concatenation
    (48) conditional -> . TkIf guards TkFi
    (54) for -> . TkFor id TkIn expression TkTo expression TkArrow execute TkRof
    (55) do -> . TkDo expression TkArrow execute TkOd
    (59) id -> . TkId

    TkSkip          shift and go to state 9
    TkPrint         shift and go to state 16
    TkIf            shift and go to state 17
    TkFor           shift and go to state 18
    TkDo            shift and go to state 19
    TkId            shift and go to state 20

    instructions                   shift and go to state 7
    instruction                    shift and go to state 8
    assignment                     shift and go to state 10
    print_instruction              shift and go to state 11
    conditional                    shift and go to state 12
    for                            shift and go to state 13
    do                             shift and go to state 14
    id                             shift and go to state 15

state 5

    (3) declarations -> TkDeclare . seq_declarations
    (5) seq_declarations -> . declaration TkSemicolon seq_declarations
    (6) seq_declarations -> . declaration
    (7) declaration -> . idLists TkTwoPoints type
    (8) idLists -> . id TkComma idLists
    (9) idLists -> . id
    (59) id -> . TkId

    TkId            shift and go to state 20

    seq_declarations               shift and go to state 21
    declaration                    shift and go to state 22
    idLists                        shift and go to state 23
    id                             shift and go to state 24

state 6

    (4) declarations -> lambda .

    TkSkip          reduce using rule 4 (declarations -> lambda .)
    TkPrint         reduce using rule 4 (declarations -> lambda .)
    TkIf            reduce using rule 4 (declarations -> lambda .)
    TkFor           reduce using rule 4 (declarations -> lambda .)
    TkDo            reduce using rule 4 (declarations -> lambda .)
    TkId            reduce using rule 4 (declarations -> lambda .)


state 7

    (2) block -> TkOBlock declarations instructions . TkCBlock
    (10) instructions -> instructions . TkSemicolon instruction

    TkCBlock        shift and go to state 25
    TkSemicolon     shift and go to state 26


state 8

    (11) instructions -> instruction .

    TkCBlock        reduce using rule 11 (instructions -> instruction .)
    TkSemicolon     reduce using rule 11 (instructions -> instruction .)
    TkFi            reduce using rule 11 (instructions -> instruction .)
    TkGuard         reduce using rule 11 (instructions -> instruction .)
    TkOd            reduce using rule 11 (instructions -> instruction .)
    TkRof           reduce using rule 11 (instructions -> instruction .)


state 9

    (12) instruction -> TkSkip .

    TkCBlock        reduce using rule 12 (instruction -> TkSkip .)
    TkSemicolon     reduce using rule 12 (instruction -> TkSkip .)
    TkFi            reduce using rule 12 (instruction -> TkSkip .)
    TkGuard         reduce using rule 12 (instruction -> TkSkip .)
    TkOd            reduce using rule 12 (instruction -> TkSkip .)
    TkRof           reduce using rule 12 (instruction -> TkSkip .)


state 10

    (13) instruction -> assignment .

    TkCBlock        reduce using rule 13 (instruction -> assignment .)
    TkSemicolon     reduce using rule 13 (instruction -> assignment .)
    TkFi            reduce using rule 13 (instruction -> assignment .)
    TkGuard         reduce using rule 13 (instruction -> assignment .)
    TkOd            reduce using rule 13 (instruction -> assignment .)
    TkRof           reduce using rule 13 (instruction -> assignment .)


state 11

    (14) instruction -> print_instruction .

    TkCBlock        reduce using rule 14 (instruction -> print_instruction .)
    TkSemicolon     reduce using rule 14 (instruction -> print_instruction .)
    TkFi            reduce using rule 14 (instruction -> print_instruction .)
    TkGuard         reduce using rule 14 (instruction -> print_instruction .)
    TkOd            reduce using rule 14 (instruction -> print_instruction .)
    TkRof           reduce using rule 14 (instruction -> print_instruction .)


state 12

    (15) instruction -> conditional .

    TkCBlock        reduce using rule 15 (instruction -> conditional .)
    TkSemicolon     reduce using rule 15 (instruction -> conditional .)
    TkFi            reduce using rule 15 (instruction -> conditional .)
    TkGuard         reduce using rule 15 (instruction -> conditional .)
    TkOd            reduce using rule 15 (instruction -> conditional .)
    TkRof           reduce using rule 15 (instruction -> conditional .)


state 13

    (16) instruction -> for .

    TkCBlock        reduce using rule 16 (instruction -> for .)
    TkSemicolon     reduce using rule 16 (instruction -> for .)
    TkFi            reduce using rule 16 (instruction -> for .)
    TkGuard         reduce using rule 16 (instruction -> for .)
    TkOd            reduce using rule 16 (instruction -> for .)
    TkRof           reduce using rule 16 (instruction -> for .)


state 14

    (17) instruction -> do .

    TkCBlock        reduce using rule 17 (instruction -> do .)
    TkSemicolon     reduce using rule 17 (instruction -> do .)
    TkFi            reduce using rule 17 (instruction -> do .)
    TkGuard         reduce using rule 17 (instruction -> do .)
    TkOd            reduce using rule 17 (instruction -> do .)
    TkRof           reduce using rule 17 (instruction -> do .)


state 15

    (18) assignment -> id . TkAsig expression
    (19) assignment -> id . TkAsig array_expr

    TkAsig          shift and go to state 27


state 16

    (45) print_instruction -> TkPrint . concatenation
    (46) concatenation -> . concatenation TkConcat expression
    (47) concatenation -> . expression
    (20) expression -> . expression TkPlus expression
    (21) expression -> . expression TkMinus expression
    (22) expression -> . expression TkMult expression
    (23) expression -> . expression TkOr expression
    (24) expression -> . expression TkAnd expression
    (25) expression -> . expression TkLess expression
    (26) expression -> . expression TkLeq expression
    (27) expression -> . expression TkGeq expression
    (28) expression -> . expression TkGreater expression
    (29) expression -> . expression TkEqual expression
    (30) expression -> . expression TkNEqual expression
    (31) expression -> . TkMinus expression
    (32) expression -> . TkNot expression
    (33) expression -> . TkOpenPar expression TkClosePar
    (34) expression -> . array_access
    (35) expression -> . array_modify
    (36) expression -> . number
    (37) expression -> . boolean
    (38) expression -> . id
    (39) expression -> . string
    (43) array_access -> . id TkOBracket expression TkCBracket
    (44) array_modify -> . expression TkOpenPar expression TkTwoPoints expression TkClosePar
    (60) number -> . TkNum
    (61) boolean -> . TkTrue
    (62) boolean -> . TkFalse
    (59) id -> . TkId
    (63) string -> . TkString

    TkMinus         shift and go to state 30
    TkNot           shift and go to state 31
    TkOpenPar       shift and go to state 32
    TkNum           shift and go to state 39
    TkTrue          shift and go to state 40
    TkFalse         shift and go to state 41
    TkId            shift and go to state 20
    TkString        shift and go to state 42

    concatenation                  shift and go to state 28
    expression                     shift and go to state 29
    array_access                   shift and go to state 33
    array_modify                   shift and go to state 34
    number                         shift and go to state 35
    boolean                        shift and go to state 36
    id                             shift and go to state 37
    string                         shift and go to state 38

state 17

    (48) conditional -> TkIf . guards TkFi
    (49) guards -> . guards TkGuard guard
    (50) guards -> . guard
    (51) guard -> . expression TkArrow execute
    (20) expression -> . expression TkPlus expression
    (21) expression -> . expression TkMinus expression
    (22) expression -> . expression TkMult expression
    (23) expression -> . expression TkOr expression
    (24) expression -> . expression TkAnd expression
    (25) expression -> . expression TkLess expression
    (26) expression -> . expression TkLeq expression
    (27) expression -> . expression TkGeq expression
    (28) expression -> . expression TkGreater expression
    (29) expression -> . expression TkEqual expression
    (30) expression -> . expression TkNEqual expression
    (31) expression -> . TkMinus expression
    (32) expression -> . TkNot expression
    (33) expression -> . TkOpenPar expression TkClosePar
    (34) expression -> . array_access
    (35) expression -> . array_modify
    (36) expression -> . number
    (37) expression -> . boolean
    (38) expression -> . id
    (39) expression -> . string
    (43) array_access -> . id TkOBracket expression TkCBracket
    (44) array_modify -> . expression TkOpenPar expression TkTwoPoints expression TkClosePar
    (60) number -> . TkNum
    (61) boolean -> . TkTrue
    (62) boolean -> . TkFalse
    (59) id -> . TkId
    (63) string -> . TkString

    TkMinus         shift and go to state 30
    TkNot           shift and go to state 31
    TkOpenPar       shift and go to state 32
    TkNum           shift and go to state 39
    TkTrue          shift and go to state 40
    TkFalse         shift and go to state 41
    TkId            shift and go to state 20
    TkString        shift and go to state 42

    guards                         shift and go to state 43
    guard                          shift and go to state 44
    expression                     shift and go to state 45
    array_access                   shift and go to state 33
    array_modify                   shift and go to state 34
    number                         shift and go to state 35
    boolean                        shift and go to state 36
    id                             shift and go to state 37
    string                         shift and go to state 38

state 18

    (54) for -> TkFor . id TkIn expression TkTo expression TkArrow execute TkRof
    (59) id -> . TkId

    TkId            shift and go to state 20

    id                             shift and go to state 46

state 19

    (55) do -> TkDo . expression TkArrow execute TkOd
    (20) expression -> . expression TkPlus expression
    (21) expression -> . expression TkMinus expression
    (22) expression -> . expression TkMult expression
    (23) expression -> . expression TkOr expression
    (24) expression -> . expression TkAnd expression
    (25) expression -> . expression TkLess expression
    (26) expression -> . expression TkLeq expression
    (27) expression -> . expression TkGeq expression
    (28) expression -> . expression TkGreater expression
    (29) expression -> . expression TkEqual expression
    (30) expression -> . expression TkNEqual expression
    (31) expression -> . TkMinus expression
    (32) expression -> . TkNot expression
    (33) expression -> . TkOpenPar expression TkClosePar
    (34) expression -> . array_access
    (35) expression -> . array_modify
    (36) expression -> . number
    (37) expression -> . boolean
    (38) expression -> . id
    (39) expression -> . string
    (43) array_access -> . id TkOBracket expression TkCBracket
    (44) array_modify -> . expression TkOpenPar expression TkTwoPoints expression TkClosePar
    (60) number -> . TkNum
    (61) boolean -> . TkTrue
    (62) boolean -> . TkFalse
    (59) id -> . TkId
    (63) string -> . TkString

    TkMinus         shift and go to state 30
    TkNot           shift and go to state 31
    TkOpenPar       shift and go to state 32
    TkNum           shift and go to state 39
    TkTrue          shift and go to state 40
    TkFalse         shift and go to state 41
    TkId            shift and go to state 20
    TkString        shift and go to state 42

    expression                     shift and go to state 47
    array_access                   shift and go to state 33
    array_modify                   shift and go to state 34
    number                         shift and go to state 35
    boolean                        shift and go to state 36
    id                             shift and go to state 37
    string                         shift and go to state 38

state 20

    (59) id -> TkId .

    TkAsig          reduce using rule 59 (id -> TkId .)
    TkComma         reduce using rule 59 (id -> TkId .)
    TkTwoPoints     reduce using rule 59 (id -> TkId .)
    TkOBracket      reduce using rule 59 (id -> TkId .)
    TkPlus          reduce using rule 59 (id -> TkId .)
    TkMinus         reduce using rule 59 (id -> TkId .)
    TkMult          reduce using rule 59 (id -> TkId .)
    TkOr            reduce using rule 59 (id -> TkId .)
    TkAnd           reduce using rule 59 (id -> TkId .)
    TkLess          reduce using rule 59 (id -> TkId .)
    TkLeq           reduce using rule 59 (id -> TkId .)
    TkGeq           reduce using rule 59 (id -> TkId .)
    TkGreater       reduce using rule 59 (id -> TkId .)
    TkEqual         reduce using rule 59 (id -> TkId .)
    TkNEqual        reduce using rule 59 (id -> TkId .)
    TkOpenPar       reduce using rule 59 (id -> TkId .)
    TkConcat        reduce using rule 59 (id -> TkId .)
    TkCBlock        reduce using rule 59 (id -> TkId .)
    TkSemicolon     reduce using rule 59 (id -> TkId .)
    TkFi            reduce using rule 59 (id -> TkId .)
    TkGuard         reduce using rule 59 (id -> TkId .)
    TkOd            reduce using rule 59 (id -> TkId .)
    TkRof           reduce using rule 59 (id -> TkId .)
    TkArrow         reduce using rule 59 (id -> TkId .)
    TkIn            reduce using rule 59 (id -> TkId .)
    TkClosePar      reduce using rule 59 (id -> TkId .)
    TkCBracket      reduce using rule 59 (id -> TkId .)
    TkTo            reduce using rule 59 (id -> TkId .)


state 21

    (3) declarations -> TkDeclare seq_declarations .

    TkSkip          reduce using rule 3 (declarations -> TkDeclare seq_declarations .)
    TkPrint         reduce using rule 3 (declarations -> TkDeclare seq_declarations .)
    TkIf            reduce using rule 3 (declarations -> TkDeclare seq_declarations .)
    TkFor           reduce using rule 3 (declarations -> TkDeclare seq_declarations .)
    TkDo            reduce using rule 3 (declarations -> TkDeclare seq_declarations .)
    TkId            reduce using rule 3 (declarations -> TkDeclare seq_declarations .)


state 22

    (5) seq_declarations -> declaration . TkSemicolon seq_declarations
    (6) seq_declarations -> declaration .

    TkSemicolon     shift and go to state 48
    TkSkip          reduce using rule 6 (seq_declarations -> declaration .)
    TkPrint         reduce using rule 6 (seq_declarations -> declaration .)
    TkIf            reduce using rule 6 (seq_declarations -> declaration .)
    TkFor           reduce using rule 6 (seq_declarations -> declaration .)
    TkDo            reduce using rule 6 (seq_declarations -> declaration .)
    TkId            reduce using rule 6 (seq_declarations -> declaration .)


state 23

    (7) declaration -> idLists . TkTwoPoints type

    TkTwoPoints     shift and go to state 49


state 24

    (8) idLists -> id . TkComma idLists
    (9) idLists -> id .

    TkComma         shift and go to state 50
    TkTwoPoints     reduce using rule 9 (idLists -> id .)


state 25

    (2) block -> TkOBlock declarations instructions TkCBlock .

    $end            reduce using rule 2 (block -> TkOBlock declarations instructions TkCBlock .)
    TkFi            reduce using rule 2 (block -> TkOBlock declarations instructions TkCBlock .)
    TkGuard         reduce using rule 2 (block -> TkOBlock declarations instructions TkCBlock .)
    TkOd            reduce using rule 2 (block -> TkOBlock declarations instructions TkCBlock .)
    TkRof           reduce using rule 2 (block -> TkOBlock declarations instructions TkCBlock .)


state 26

    (10) instructions -> instructions TkSemicolon . instruction
    (12) instruction -> . TkSkip
    (13) instruction -> . assignment
    (14) instruction -> . print_instruction
    (15) instruction -> . conditional
    (16) instruction -> . for
    (17) instruction -> . do
    (18) assignment -> . id TkAsig expression
    (19) assignment -> . id TkAsig array_expr
    (45) print_instruction -> . TkPrint concatenation
    (48) conditional -> . TkIf guards TkFi
    (54) for -> . TkFor id TkIn expression TkTo expression TkArrow execute TkRof
    (55) do -> . TkDo expression TkArrow execute TkOd
    (59) id -> . TkId

    TkSkip          shift and go to state 9
    TkPrint         shift and go to state 16
    TkIf            shift and go to state 17
    TkFor           shift and go to state 18
    TkDo            shift and go to state 19
    TkId            shift and go to state 20

    instruction                    shift and go to state 51
    assignment                     shift and go to state 10
    print_instruction              shift and go to state 11
    conditional                    shift and go to state 12
    for                            shift and go to state 13
    do                             shift and go to state 14
    id                             shift and go to state 15

state 27

    (18) assignment -> id TkAsig . expression
    (19) assignment -> id TkAsig . array_expr
    (20) expression -> . expression TkPlus expression
    (21) expression -> . expression TkMinus expression
    (22) expression -> . expression TkMult expression
    (23) expression -> . expression TkOr expression
    (24) expression -> . expression TkAnd expression
    (25) expression -> . expression TkLess expression
    (26) expression -> . expression TkLeq expression
    (27) expression -> . expression TkGeq expression
    (28) expression -> . expression TkGreater expression
    (29) expression -> . expression TkEqual expression
    (30) expression -> . expression TkNEqual expression
    (31) expression -> . TkMinus expression
    (32) expression -> . TkNot expression
    (33) expression -> . TkOpenPar expression TkClosePar
    (34) expression -> . array_access
    (35) expression -> . array_modify
    (36) expression -> . number
    (37) expression -> . boolean
    (38) expression -> . id
    (39) expression -> . string
    (40) array_expr -> . array
    (43) array_access -> . id TkOBracket expression TkCBracket
    (44) array_modify -> . expression TkOpenPar expression TkTwoPoints expression TkClosePar
    (60) number -> . TkNum
    (61) boolean -> . TkTrue
    (62) boolean -> . TkFalse
    (59) id -> . TkId
    (63) string -> . TkString
    (41) array -> . array TkComma expression
    (42) array -> . expression

    TkMinus         shift and go to state 30
    TkNot           shift and go to state 31
    TkOpenPar       shift and go to state 32
    TkNum           shift and go to state 39
    TkTrue          shift and go to state 40
    TkFalse         shift and go to state 41
    TkId            shift and go to state 20
    TkString        shift and go to state 42

    id                             shift and go to state 37
    expression                     shift and go to state 52
    array_expr                     shift and go to state 53
    array_access                   shift and go to state 33
    array_modify                   shift and go to state 34
    number                         shift and go to state 35
    boolean                        shift and go to state 36
    string                         shift and go to state 38
    array                          shift and go to state 54

state 28

    (45) print_instruction -> TkPrint concatenation .
    (46) concatenation -> concatenation . TkConcat expression

    TkCBlock        reduce using rule 45 (print_instruction -> TkPrint concatenation .)
    TkSemicolon     reduce using rule 45 (print_instruction -> TkPrint concatenation .)
    TkFi            reduce using rule 45 (print_instruction -> TkPrint concatenation .)
    TkGuard         reduce using rule 45 (print_instruction -> TkPrint concatenation .)
    TkOd            reduce using rule 45 (print_instruction -> TkPrint concatenation .)
    TkRof           reduce using rule 45 (print_instruction -> TkPrint concatenation .)
    TkConcat        shift and go to state 55


state 29

    (47) concatenation -> expression .
    (20) expression -> expression . TkPlus expression
    (21) expression -> expression . TkMinus expression
    (22) expression -> expression . TkMult expression
    (23) expression -> expression . TkOr expression
    (24) expression -> expression . TkAnd expression
    (25) expression -> expression . TkLess expression
    (26) expression -> expression . TkLeq expression
    (27) expression -> expression . TkGeq expression
    (28) expression -> expression . TkGreater expression
    (29) expression -> expression . TkEqual expression
    (30) expression -> expression . TkNEqual expression
    (44) array_modify -> expression . TkOpenPar expression TkTwoPoints expression TkClosePar

    TkConcat        reduce using rule 47 (concatenation -> expression .)
    TkCBlock        reduce using rule 47 (concatenation -> expression .)
    TkSemicolon     reduce using rule 47 (concatenation -> expression .)
    TkFi            reduce using rule 47 (concatenation -> expression .)
    TkGuard         reduce using rule 47 (concatenation -> expression .)
    TkOd            reduce using rule 47 (concatenation -> expression .)
    TkRof           reduce using rule 47 (concatenation -> expression .)
    TkPlus          shift and go to state 56
    TkMinus         shift and go to state 57
    TkMult          shift and go to state 58
    TkOr            shift and go to state 59
    TkAnd           shift and go to state 60
    TkLess          shift and go to state 61
    TkLeq           shift and go to state 62
    TkGeq           shift and go to state 63
    TkGreater       shift and go to state 64
    TkEqual         shift and go to state 65
    TkNEqual        shift and go to state 66
    TkOpenPar       shift and go to state 67


state 30

    (31) expression -> TkMinus . expression
    (20) expression -> . expression TkPlus expression
    (21) expression -> . expression TkMinus expression
    (22) expression -> . expression TkMult expression
    (23) expression -> . expression TkOr expression
    (24) expression -> . expression TkAnd expression
    (25) expression -> . expression TkLess expression
    (26) expression -> . expression TkLeq expression
    (27) expression -> . expression TkGeq expression
    (28) expression -> . expression TkGreater expression
    (29) expression -> . expression TkEqual expression
    (30) expression -> . expression TkNEqual expression
    (31) expression -> . TkMinus expression
    (32) expression -> . TkNot expression
    (33) expression -> . TkOpenPar expression TkClosePar
    (34) expression -> . array_access
    (35) expression -> . array_modify
    (36) expression -> . number
    (37) expression -> . boolean
    (38) expression -> . id
    (39) expression -> . string
    (43) array_access -> . id TkOBracket expression TkCBracket
    (44) array_modify -> . expression TkOpenPar expression TkTwoPoints expression TkClosePar
    (60) number -> . TkNum
    (61) boolean -> . TkTrue
    (62) boolean -> . TkFalse
    (59) id -> . TkId
    (63) string -> . TkString

    TkMinus         shift and go to state 30
    TkNot           shift and go to state 31
    TkOpenPar       shift and go to state 32
    TkNum           shift and go to state 39
    TkTrue          shift and go to state 40
    TkFalse         shift and go to state 41
    TkId            shift and go to state 20
    TkString        shift and go to state 42

    expression                     shift and go to state 68
    array_access                   shift and go to state 33
    array_modify                   shift and go to state 34
    number                         shift and go to state 35
    boolean                        shift and go to state 36
    id                             shift and go to state 37
    string                         shift and go to state 38

state 31

    (32) expression -> TkNot . expression
    (20) expression -> . expression TkPlus expression
    (21) expression -> . expression TkMinus expression
    (22) expression -> . expression TkMult expression
    (23) expression -> . expression TkOr expression
    (24) expression -> . expression TkAnd expression
    (25) expression -> . expression TkLess expression
    (26) expression -> . expression TkLeq expression
    (27) expression -> . expression TkGeq expression
    (28) expression -> . expression TkGreater expression
    (29) expression -> . expression TkEqual expression
    (30) expression -> . expression TkNEqual expression
    (31) expression -> . TkMinus expression
    (32) expression -> . TkNot expression
    (33) expression -> . TkOpenPar expression TkClosePar
    (34) expression -> . array_access
    (35) expression -> . array_modify
    (36) expression -> . number
    (37) expression -> . boolean
    (38) expression -> . id
    (39) expression -> . string
    (43) array_access -> . id TkOBracket expression TkCBracket
    (44) array_modify -> . expression TkOpenPar expression TkTwoPoints expression TkClosePar
    (60) number -> . TkNum
    (61) boolean -> . TkTrue
    (62) boolean -> . TkFalse
    (59) id -> . TkId
    (63) string -> . TkString

    TkMinus         shift and go to state 30
    TkNot           shift and go to state 31
    TkOpenPar       shift and go to state 32
    TkNum           shift and go to state 39
    TkTrue          shift and go to state 40
    TkFalse         shift and go to state 41
    TkId            shift and go to state 20
    TkString        shift and go to state 42

    expression                     shift and go to state 69
    array_access                   shift and go to state 33
    array_modify                   shift and go to state 34
    number                         shift and go to state 35
    boolean                        shift and go to state 36
    id                             shift and go to state 37
    string                         shift and go to state 38

state 32

    (33) expression -> TkOpenPar . expression TkClosePar
    (20) expression -> . expression TkPlus expression
    (21) expression -> . expression TkMinus expression
    (22) expression -> . expression TkMult expression
    (23) expression -> . expression TkOr expression
    (24) expression -> . expression TkAnd expression
    (25) expression -> . expression TkLess expression
    (26) expression -> . expression TkLeq expression
    (27) expression -> . expression TkGeq expression
    (28) expression -> . expression TkGreater expression
    (29) expression -> . expression TkEqual expression
    (30) expression -> . expression TkNEqual expression
    (31) expression -> . TkMinus expression
    (32) expression -> . TkNot expression
    (33) expression -> . TkOpenPar expression TkClosePar
    (34) expression -> . array_access
    (35) expression -> . array_modify
    (36) expression -> . number
    (37) expression -> . boolean
    (38) expression -> . id
    (39) expression -> . string
    (43) array_access -> . id TkOBracket expression TkCBracket
    (44) array_modify -> . expression TkOpenPar expression TkTwoPoints expression TkClosePar
    (60) number -> . TkNum
    (61) boolean -> . TkTrue
    (62) boolean -> . TkFalse
    (59) id -> . TkId
    (63) string -> . TkString

    TkMinus         shift and go to state 30
    TkNot           shift and go to state 31
    TkOpenPar       shift and go to state 32
    TkNum           shift and go to state 39
    TkTrue          shift and go to state 40
    TkFalse         shift and go to state 41
    TkId            shift and go to state 20
    TkString        shift and go to state 42

    expression                     shift and go to state 70
    array_access                   shift and go to state 33
    array_modify                   shift and go to state 34
    number                         shift and go to state 35
    boolean                        shift and go to state 36
    id                             shift and go to state 37
    string                         shift and go to state 38

state 33

    (34) expression -> array_access .

    TkPlus          reduce using rule 34 (expression -> array_access .)
    TkMinus         reduce using rule 34 (expression -> array_access .)
    TkMult          reduce using rule 34 (expression -> array_access .)
    TkOr            reduce using rule 34 (expression -> array_access .)
    TkAnd           reduce using rule 34 (expression -> array_access .)
    TkLess          reduce using rule 34 (expression -> array_access .)
    TkLeq           reduce using rule 34 (expression -> array_access .)
    TkGeq           reduce using rule 34 (expression -> array_access .)
    TkGreater       reduce using rule 34 (expression -> array_access .)
    TkEqual         reduce using rule 34 (expression -> array_access .)
    TkNEqual        reduce using rule 34 (expression -> array_access .)
    TkOpenPar       reduce using rule 34 (expression -> array_access .)
    TkConcat        reduce using rule 34 (expression -> array_access .)
    TkCBlock        reduce using rule 34 (expression -> array_access .)
    TkSemicolon     reduce using rule 34 (expression -> array_access .)
    TkFi            reduce using rule 34 (expression -> array_access .)
    TkGuard         reduce using rule 34 (expression -> array_access .)
    TkOd            reduce using rule 34 (expression -> array_access .)
    TkRof           reduce using rule 34 (expression -> array_access .)
    TkArrow         reduce using rule 34 (expression -> array_access .)
    TkComma         reduce using rule 34 (expression -> array_access .)
    TkClosePar      reduce using rule 34 (expression -> array_access .)
    TkTwoPoints     reduce using rule 34 (expression -> array_access .)
    TkCBracket      reduce using rule 34 (expression -> array_access .)
    TkTo            reduce using rule 34 (expression -> array_access .)


state 34

    (35) expression -> array_modify .
